# salvador

./: .gitignore  CMakeLists.txt  MACHINE.CFG  Makefile  MakefileGUI  MakefileTest  README.md  clean_gui.sh  clean_test.sh  clear.sh  dox.cfg  gui  make_gui.sh  salvador  salvador.pro
batch/: clean_mdi.sh  clear.sh  make_mdi.sh  make_test.sh
data/: prog1.sal  prog4.sal  proof.sal
doc/: Doxyfile.in
doc/html/: Author_8h-source.html  ChildWindow_8h-source.html  WorkspaceWindow_8h-source.html  annotated.html  classSAbstractGrid-members.html  classSAbstractGrid.html  classSAbstractMachine-members.html  classSAbstractMachine.html  classSAbstractPointer-members.html  classSAbstractPointer.html  classSAction-members.html  (+85 more)
graphs/: codearea.dot  virtual.dot
src/: CMakeLists.txt  console.cpp  debug.h  gui.cpp  test.cpp
src/core/: CMakeLists.txt  s_abstract_grid.cpp  s_abstract_grid.h  s_abstract_machine.cpp  s_abstract_machine.h  s_abstract_pointer.cpp  s_abstract_pointer.h  s_code_grid.cpp  s_code_grid.h  s_code_image_pointer.cpp  s_code_image_pointer.h  s_code_machine.cpp  s_code_machine.h  s_data_grid.cpp  s_data_grid.h  s_data_image_pointer.cpp  s_data_image_pointer.h  s_data_machine.cpp  s_data_machine.h  s_enums.h  s_virtual_machine.cpp  s_virtual_machine.h  sabstractgrid.cpp  sabstractgrid.h  sabstractmachine.cpp  sabstractmachine.h  sabstractpointer.cpp  sabstractpointer.h  saction.cpp  saction.h  scodegrid.cpp  scodegrid.h  scodeimage.cpp  scodeimage.h  scodeimagepointer.cpp  scodeimagepointer.h  scodemachine.cpp  scodemachine.h  scodestats.cpp  scodestats.h  (+15 more)
(+66 files in other folders)
